2000-02-21  Harlan Stenn  <stenn@whimsy.udel.edu>

	* include/Makefile.am (noinst_HEADERS): No, we don't want des.h

2000-02-20  Harlan Stenn  <stenn@whimsy.udel.edu>

	* include/Makefile.am (noinst_HEADERS): Add des.h

2000-02-19  Harlan Stenn  <stenn@whimsy.udel.edu>

	* ntpd/ntp_config.c (do_resolve_internal): Try Real Hard to
	generate a full random key.
	From: Carl Byington <carl@five-ten-sg.com>

	* include/ntp.h: Now we know we have either mrand48() or random().
	* configure.in: If we have mrand48, use it.  Otherwise, use (and
	provide if necessary) random().
	* libntp/Makefile.am (EXTRA_DIST): random.c
	* libntp/random.c: Added.

2000-02-18  Harlan Stenn  <stenn@whimsy.udel.edu>

	* librsaref/Makefile.am (stamp-rsaref): Typo

	* configure.in (ac_cv_func_ctty_for_f_setown): Yes for OpenBSD
	(ac_cv_var_ntp_syscalls): Fix quoting of description
	From: Jonathan Rozes <jrozes@vinton.com>

	* librsaref/Makefile.am: Fix stamp-rsaref dependency order.

	* configure.in: 4.0.99f

2000-02-17  Harlan Stenn  <stenn@whimsy.udel.edu>

	* ntpd/refclock_mx4200.c: Remove the DOP-weighted position
	averaging code and revert to a simple mean average.  The weighted
	average consistently produced a *worse* result.  Go figure. 
	* html/mx4200data.htm: Cleanup, reflect current reality.
	* html/driver9.htm: Cleanup, reflect current reality.
	* html/copyright.htm: Cleanup, and credit where credit is due.
	From: Marc.Brett@westgeo.com
	
	* ntpd/refclock_oncore.c: Cleanup/fixes
	* html/driver30.htm: Cleanup
	* html/Oncore-SHMEM.htm: Cleanup
	From: Reg Clemens <reg@dwf.com>

2000-02-16  Sven Dietrich <sven_dietrich@trimble.com>

	* winnt/scripts/mkver.bat:    Frederick Czajka [w2k@austin.rr.com]
	  winnt/ntpq/ntpq.dsp:        modified mkver.bat to eliminate the
	  winnt/ntpd/ntpd.dsp:	      need to have Perl installed and the
	  winnt/ntpdc/ntpdc.dsp:      PERL environment variable to be set.
	  winnt/ntpdate/ntpdate.dsp:
	  winnt/ntptrace/ntptrace.dsp:    Thanks, Frederick!
