@@ -1,5 +1,15 @@
 2000-02-21  Harlan Stenn  <stenn@whimsy.udel.edu>
 
+	* Makefile.am (SUBDIRS): Make librsaref right after includes so we
+	can copy any needed header files over.
+
+	* libntp/Makefile.am (INCLUDES): Also look in librsaref for des.h
+	* ntpd/Makefile.am (INCLUDES): Ditto
+	* util/Makefile.am (INCLUDES): Ditto
+
+	* librsaref/Makefile.am (librsaref_a_SOURCES): Use the des.h from
+	the rsaref2 distribution.
+
 	* include/Makefile.am (noinst_HEADERS): No, we don't want des.h
 
 2000-02-20  Harlan Stenn  <stenn@whimsy.udel.edu>
